Implement basic movie posters module
The change mainly for the first screen of the app which presents the user with a grid arrangement of movie posters.

The design plan is taken from the app:
https://github.com/udacity/android-custom-arrayadapter/tree/gridview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Popular Movies</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="movie_poster_image_content_description">poster icon</string>
 </resources>
