Complete movie posters section
The main fragment displays move posters that fetches from the movie DB API. We can display two types of movies. First one is popular movies and the second one is top rated movies. The type is selected from the menu items.

The change mainly consists of background source code that is for fetching and displaying movies data.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="movie_poster_image_content_description">poster icon</string>
+    <string name="main_menu_popular_item_title">Popular</string>
+    <string name="main_menu_top_rated_item_title">Top Rated</string>
 </resources>
