--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Popular Movies</string>
+    <string name="movie_details_activity_label">Movie Details</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="movie_poster_image_content_description">poster icon</string>
     <string name="main_menu_popular_item_title">Popular</string>
     <string name="main_menu_top_rated_item_title">Top Rated</string>
